--- a/eaw-build/eaw-build.csproj
+++ b/eaw-build/eaw-build.csproj
@@ -18,6 +18,8 @@
         <PackageReference Include="Microsoft.Win32.Registry" Version="4.6.0" />
         <PackageReference Include="pg.dat" Version="1.0.0" />
         <PackageReference Include="pg.meg" Version="1.0.0" />
+        <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
+        <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00837" />
     </ItemGroup>
 
     <ItemGroup>
