--- a/eaw-build/eaw-build.csproj
+++ b/eaw-build/eaw-build.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
         <PackageReference Include="CommandLineParser" Version="2.6.0" />
         <PackageReference Include="Microsoft.Win32.Registry" Version="4.6.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="pg.dat" Version="1.0.0" />
         <PackageReference Include="pg.meg" Version="1.0.0" />
         <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
@@ -29,10 +30,51 @@
         <None Remove="data\config\v1\yvaw-build.xsd" />
         <None Remove="data\config\text\v1\eaw-translation.xsd" />
         <EmbeddedResource Include="data\config\text\v1\eaw-translation.xsd" />
+        <None Remove="data\config\text\dat\eaw\de\creditstext_german.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\de\creditstext_german.dat" />
+        <None Remove="data\config\text\dat\eaw\de\mastertextfile_german.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\de\mastertextfile_german.dat" />
+        <None Remove="data\config\text\dat\eaw\es\creditstext_spanish.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\es\creditstext_spanish.dat" />
+        <None Remove="data\config\text\dat\eaw\es\mastertextfile_spanish.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\es\mastertextfile_spanish.dat" />
+        <None Remove="data\config\text\dat\eaw\fr\creditstext_french.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\fr\creditstext_french.dat" />
+        <None Remove="data\config\text\dat\eaw\fr\mastertextfile_french.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\fr\mastertextfile_french.dat" />
+        <None Remove="data\config\text\dat\eaw\it\creditstext_italian.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\it\creditstext_italian.dat" />
+        <None Remove="data\config\text\dat\eaw\it\mastertextfile_italian.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\it\mastertextfile_italian.dat" />
+        <None Remove="data\config\text\dat\foc\de\creditstext_german.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\de\creditstext_german.dat" />
+        <None Remove="data\config\text\dat\foc\de\mastertextfile_german.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\de\mastertextfile_german.dat" />
+        <None Remove="data\config\text\dat\foc\en\creditstext_english.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\en\creditstext_english.dat" />
+        <None Remove="data\config\text\dat\foc\en\mastertextfile_english.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\en\mastertextfile_english.dat" />
+        <None Remove="data\config\text\dat\foc\es\creditstext_spanish.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\es\creditstext_spanish.dat" />
+        <None Remove="data\config\text\dat\foc\es\mastertextfile_spanish.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\es\mastertextfile_spanish.dat" />
+        <None Remove="data\config\text\dat\foc\fr\creditstext_french.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\fr\creditstext_french.dat" />
+        <None Remove="data\config\text\dat\foc\fr\mastertextfile_french.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\fr\mastertextfile_french.dat" />
+        <None Remove="data\config\text\dat\foc\it\creditstext_italian.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\it\creditstext_italian.dat" />
+        <None Remove="data\config\text\dat\foc\it\mastertextfile_italian.dat" />
+        <EmbeddedResource Include="data\config\text\dat\foc\it\mastertextfile_italian.dat" />
+        <None Remove="data\config\text\dat\eaw\en\creditstext_english.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\en\creditstext_english.dat" />
+        <None Remove="data\config\text\dat\eaw\en\mastertextfile_english.dat" />
+        <EmbeddedResource Include="data\config\text\dat\eaw\en\mastertextfile_english.dat" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="data\config\text\v2" />
+      <Folder Include="data\config\text\dat\eaw" />
+      <Folder Include="data\config\text\dat\foc" />
     </ItemGroup>
 
 </Project>
