--- a/eaw-build/eaw-build.csproj
+++ b/eaw-build/eaw-build.csproj
@@ -11,6 +11,7 @@
         <Product>Empire at War Build Tool</Product>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
         <FileVersion>1.0.0.0</FileVersion>
+        <ProjectGuid>{F5944688-BDF2-4470-8784-FF906B981D83}</ProjectGuid>
     </PropertyGroup>
 
     <ItemGroup>
