--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,24 @@ install:
 before_script:
   - export PATH="$PATH:$HOME/.dotnet/tools"
 
-script:
-  - dotnet sonarscanner begin /k:$SONAR_PROJECT /o:$SONAR_ORGANIZATION /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=$SONAR_TOKEN /d:sonar.language="cs" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*" /d:sonar.coverage.exclusions="eaw-build.test/**,**/*Tests.cs,**/TestUtility.cs" /d:sonar.cs.opencover.reportsPaths="lcov.opencover.xml" || true
-  - dotnet build eaw-build/eaw-build.csproj
-  - dotnet test eaw-build.test/eaw-build.test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=../lcov
-  - dotnet sonarscanner end /d:sonar.login=$SONAR_TOKEN || true
+stages:
+  - build
+  - test
+
+jobs:
+  include:
+    - stage: build
+      name: "Build"
+      script: dotnet build eaw-build/eaw-build.csproj
+    - stage: test
+      name: "MSTest"
+      script: dotnet test eaw-build.test/eaw-build.test.cspro
+      - script:
+        - dotnet sonarscanner begin /k:$SONAR_PROJECT /o:$SONAR_ORGANIZATION /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login=$SONAR_TOKEN /d:sonar.language="cs" /d:sonar.exclusions="**/bin/**/*,**/obj/**/*" /d:sonar.coverage.exclusions="eaw-build.test/**,**/*Tests.cs,**/TestUtility.cs" /d:sonar.cs.opencover.reportsPaths="lcov.opencover.xml" || true
+        - dotnet build eaw-build/eaw-build.csproj
+        - dotnet test eaw-build.test/eaw-build.test.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover /p:CoverletOutput=../lcov
+        - dotnet sonarscanner end /d:sonar.login=$SONAR_TOKEN || true
+      name: "SonarQube"
 
 cache:
   directories:
