--- a/eaw-build.test/eaw-build.test.csproj
+++ b/eaw-build.test/eaw-build.test.csproj
@@ -6,6 +6,8 @@
 
         <IsPackable>false</IsPackable>
         <ProjectGuid>{81C3A5AE-E6DB-4D51-B2EE-8FDDE4DEB7AA}</ProjectGuid>
+        <Configurations>Debug;Release;Test</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,6 +15,8 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
         <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="9.0.2" />
+        <PackageReference Include="Thinktecture.IO.FileSystem.Abstractions" Version="2.4.0" />
     </ItemGroup>
 
     <ItemGroup>
