--- a/eaw-build/eaw-build.csproj
+++ b/eaw-build/eaw-build.csproj
@@ -12,6 +12,12 @@
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
         <FileVersion>1.0.0.0</FileVersion>
         <ProjectGuid>{F5944688-BDF2-4470-8784-FF906B981D83}</ProjectGuid>
+        <Configurations>Debug;Release;Test</Configurations>
+        <Platforms>AnyCPU</Platforms>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Test' ">
+      <DebugSymbols>true</DebugSymbols>
     </PropertyGroup>
 
     <ItemGroup>
@@ -22,6 +28,8 @@
         <PackageReference Include="pg.meg" Version="1.0.0" />
         <PackageReference Include="Serilog" Version="2.9.1-dev-01154" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00837" />
+        <PackageReference Include="System.IO.Abstractions" Version="9.0.2" />
+        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="9.0.2" />
     </ItemGroup>
 
     <ItemGroup>
