--- a/eaw-build.test/eaw-build.test.csproj
+++ b/eaw-build.test/eaw-build.test.csproj
@@ -11,11 +11,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.msbuild" Version="2.8.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-        <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
-        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="9.0.2" />
+        <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
+        <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
+        <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
+        <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="12.0.1" />
         <PackageReference Include="Thinktecture.IO.FileSystem.Abstractions" Version="2.4.0" />
     </ItemGroup>
 
